# KrakHack2026-app

./: .gitignore  CLAUDE.md  SETUP.md  pyproject.toml
backend/: models.py
backend/api/: main.py  store.py
backend/api/tests/: test_api.py
backend/copilot/: README.md  analyzer.py  bpmn_generator.py  comparison.py  copilot.py  llm.py  recommender.py
backend/copilot/tests/: test_copilot.py
backend/pipeline/: README.md  bottlenecks.py  discovery.py  ingest.py  pipeline.py  variants.py
backend/pipeline/tests/: test_bottlenecks.py  test_ingest.py  test_models.py  test_variants.py
contracts/: copilot_input.json  copilot_output.json  pipeline_output.json
data/: README.md
docs/prd/: PRD-1-quick-fixes.md  PRD-10-overnight-fixes.md  PRD-15-automation-blueprints.md  PRD-19-dejargon.md  PRD-2-context-switches.md  PRD-20-subprocess-insight.md  PRD-21-executive-actions.md  PRD-22-visual-overhaul.md  PRD-23-ux-polish.md  PRD-3-activity-heatmap.md  PRD-4-variant-deviation.md  PRD-5-bpmn-requirements.md  PRD-6-live-alerts.md  PRD-7-roi-calculator.md  PRD-8-export-report.md  PRD-9-health-score.md  README.md
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: action-card.tsx  animated-bg.tsx  ask-process.tsx  automation-matrix.tsx  before-after.tsx  bottleneck-insight.tsx  bpmn-viewer.tsx  business-id-insight.tsx  business-impact.tsx  category-breakdown.tsx  collapsible-section.tsx  cost-of-inaction.tsx  data-flow-insight.tsx  executive-dashboard.tsx  filter-bar.tsx  health-score.tsx  (+6 more)
(+9 files in other folders)
