[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[project]
name = "process-copilot"
version = "0.1.0"
description = "AI copilot for process mining and automation - KrakHack 2026"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    # Process Mining
    "pm4py>=2.7.0",
    # Data & ML
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.6.0",
    "networkx>=3.4.0",
    # Visualization
    "plotly>=6.0.0",
    # Data validation
    "pydantic>=2.10.0",
    # HTTP client
    "httpx>=0.28.0",
    # LLM
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
